<?xml version="1.0"?>
<package format="2">
  <name>fetch_siso_launch</name>
  <version>0.1.0</version>
  <description>Launch files for the siso experiment</description>
  <maintainer email="trentonw@ifi.uio.no">Trenton Schulz</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>

</package>
