<?xml version="1.0"?>
<package format="2">
  <name>uh_siso_experiment</name>
  <version>0.1.0</version>
  <description>A GUI-based driver for Fetch at Robot House</description>
  <maintainer email="trentonw@ifi.uio.no">Trenton Schulz</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export></export>
</package>
